2014-05-15  Anthony Bradford  <info@anthonybradford.com>
	* Prefs->Settings has new checkbox named
	  Filter negative prices
	* Removed LIBGTK_3 deprecations.
	* Added 64 and 128 pixel icons for optionmatrix and
	  optionmatrix_console.
	* Reorganize source into src/common src/curses src/gtk src/models
	  directories.

2012-11-18  Anthony Bradford  <info@anthonybradford.com>
	* Autotools packaging changes to enable DESTDIR support.
	* Added optionmatrix.desktop, optionmatrix_console.desktop
	  files.
	* Added pixmaps and hicolor icons
	* Renamed gtkoptionmatrix to optionmatrix
	* Renamed optionmatrix to optionmatrix_console
	* gtk_main.cpp increased spin button GTK_ADJUSTMENT upper bound
	  size of dividend to 99999

2012-06-22  Anthony Bradford  <info@anthonybradford.com>
	* Migrated to GTK+ 3.0 (backwardly compatible w/Gtk 2.0)
	* Autotools will automatically detect select Gtk 3.0, Gtk 2.0,
	  curses, ncurses, pdcurses
	* Many config file changes with autotools packaging
	* Model timing and checks as command line options
	* Texinfo (pdf, html targets) and man / info documentation
	* Removed compiler warnings for gcc 4.6.1
	* Minor fixes

2012-02-20  Anthony Bradford  <info@anthonybradford.com>
	* Fixed strcpy issue impacting categorized combobox entries
	  on higher versions of gcc.
	* Added file "missing" to distribution.

2012-02-07  Anthony Bradford  <info@anthonybradford.com>
	* Categorized Model ComboBox Dropdown, 136+ models
	* Term Structure Models:
	  TermFlat, TermCir, TermVasicek, TermNelsonSiegel
	  TermSvensson, TermCubicSpline, TermInterpolated
	* Bond Models:
	  Bond (Flat), Bond w/Terms, Bond Principal
	* Option Models:
	  Bachelier, Sprenkle, Boness, Samuelson
	* Calculations:
	  Forward Rates, Spot, Discount Factor, PV, IRR, UIRR,
	  YTM, Convexity, Duration, Duration Modified, Duration Macaulay
	  and more.
	* Adjustable sleep between recalculations
	* Minor fixes.

2011-09-04  Anthony Bradford  <info@anthonybradford.com>