@@ -1,4 +1,4 @@
 @set UPDATED 27 June 2015
 @set UPDATED-MONTH June 2015
-@set EDITION 1.4.2
-@set VERSION 1.4.2
+@set EDITION 1.4.3
+@set VERSION 1.4.3
