@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.46.5.
-.TH OPTIONMATRIX "1" "May 2015" "optionmatrix 1.4.2" "User Commands"
+.TH OPTIONMATRIX "1" "October 2015" "optionmatrix 1.4.3" "User Commands"
 .SH NAME
 optionmatrix \- Curses Financial Derivatives Calculator
 .SH SYNOPSIS
